--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap');
+
 body {
+    margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,18 +14,32 @@ code {
     monospace;
 }
 
+h1, h2{
+    font-family: 'Dancing Script', cursive;
+    margin: 2px;
+    font-size: 5rem;
+    color: #fffdfb;
+    text-shadow: 2px 2px 10px #462000;
+}
+
+td{
+    padding: 7px;
+}
+
 main{
   min-height: 100vh;
 }
 
 header, footer{
-  min-height: 10%;
+  /*min-height: 10%;*/
   padding: 1em;
 }
+
 
 footer{
     position: relative;
     display: flex;
+    bottom: 0;
     align-content: center;
     justify-content: center;
     background: linear-gradient(0deg, rgba(255,212,155,1) 0%, rgba(255,212,155,1) 50%, rgba(255,255,255,1) 100%);
@@ -32,7 +49,79 @@ header{
     position: relative;
     display: flex;
     top: 0;
-    align-content: center;
-    justify-content: flex-start;
-    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,212,155,1) 50%, rgba(255,212,155,1) 100%);
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,212,155,1) 40%, rgba(255,212,155,1) 100%);
+}
+
+.movie-form{
+    /*border: #ffc883 2px solid;*/
+    /*border-radius: 20px;*/
+    box-shadow: rgba(250, 148, 51, 0.5) 0 7px 29px 0;
+    background: rgba(250, 148, 51, 0.2);
+    position: relative;
+    min-height: 4vh;
+    display: flex;
+
+}
+
+.movie-form > input{
+    margin: 0 5px 0 5px;
+    padding: 3px;
+    border-radius: 10px;
+}
+
+.movie-form > input[type="text"]{
+    flex-grow: 3;
+}
+
+.movie-form > input[type="text"]:focus{
+    border-color: #593000;
+}
+
+.movie-form > input[type="button"], input[type="submit"]{
+    transition: 0.3s;
+    flex-grow: 1;
+    background: rgb(37,210,95);
+    background: linear-gradient(180deg, rgba(37,210,95,1) 0%, rgba(133,255,126,1) 50%, rgba(37,210,95,1) 100%);
+}
+
+.movie-form > input[type="button"]:hover, input[type="submit"]:hover{
+    filter: brightness(120%);
+}
+
+.movie-list{
+    margin: 10px;
+    transition: 0.5s;
+}
+
+.main-content{
+    min-height: 95vh;
+}
+
+.movie-list > table{
+    position: relative;
+    min-width: 100%;
+}
+
+.movie-list > table > tr{
+    transition: 0.8s;
+}
+
+.movie{
+    height: 6vh;
+    transition: 0.1s;
+}
+
+.movie:hover{
+    background: rgb(255,255,255);
+    background: linear-gradient(
+            0deg, rgba(255,255,255,1) 0%, rgba(255,233,194,1) 20%,
+    rgba(255,205,118,1) 50%,
+    rgba(255,233,194,1) 80%,
+    rgba(255,255,255,1) 100%);
+}
+
+.movie-watched{
+    color: #888888;
 }
